--- a/WeChat/shop/pages/cart/confirm.wxml
+++ b/WeChat/shop/pages/cart/confirm.wxml
@@ -58,7 +58,7 @@
 				</view>
 				<view class="weui-cell__bd">
 					<view class="weui-media-box__title">{{item.product.name}} </view>
-					<view class="weui-media-box__desc">单价:{{item.product.average}}{{item.product.averageUnit}} × {{item.product.cart.num}}
+					<view class="weui-media-box__desc">均价:{{item.product.average}}{{item.product.averageUnit}} × {{item.product.cart.num}}
 						<label class='status'>小计{{item.cart.total}}元</label>
 					</view>
 				</view>
