--- a/WeChat/shop/pages/product/list.wxml
+++ b/WeChat/shop/pages/product/list.wxml
@@ -13,7 +13,10 @@
                     <view class="weui-media-box__title">{{item.product.name}}</view>
                     <view class="weui-media-box__desc">{{item.product.description}}</view>
                     <view class="weui-media-box__desc">
-                        <label class="weui-cell_warn">单价:{{item.product.average}}{{item.product.averageUnit}}</label>
+                        <label>单价:{{item.product.price}}{{item.product.priceUnit}}</label>
+                    </view>
+                    <view class="weui-media-box__desc">
+                        <label class="weui-cell_warn">均价:{{item.product.average}}{{item.product.averageUnit}}</label>
                     </view>
                 </view>
             </navigator>
