--- a/WeChat/shop/pages/score/detail.wxml
+++ b/WeChat/shop/pages/score/detail.wxml
@@ -59,7 +59,7 @@
 		<view class="weui-cell__bd">
 			<view class="weui-media-box__title">{{product.name}} </view>
 			<view class="weui-media-box__desc">
-				单价:{{product.price}}{{product.priceUnit}} <label class='status'>小计:{{product.total}}元</label>
+				均价:{{product.price}}{{product.priceUnit}} <label class='status'>小计:{{product.total}}元</label>
 			</view>
 		</view>
 	</view>
