--- a/WeChat/shop/pages/user/prefer.wxml
+++ b/WeChat/shop/pages/user/prefer.wxml
@@ -9,7 +9,8 @@
 			<view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
 				<view class="weui-media-box__title">{{item.product.name}}</view>
 				<view class="weui-media-box__desc">{{item.product.description}}</view>
-				<view class="weui-media-box__desc"><label class="weui-cell_warn">{{item.product.average}}{{item.product.averageUnit}}</label></view>
+				<view class="weui-media-box__desc"><label>单价:{{item.product.price}}{{item.product.priceUnit}}</label></view>
+				<view class="weui-media-box__desc"><label class="weui-cell_warn">均价:{{item.product.average}}{{item.product.averageUnit}}</label></view>
 			</view>
 		</navigator>
 		<view class="weui-cell__ft">
