--- a/WeChat/shop/pages/cart/confirm.wxml
+++ b/WeChat/shop/pages/cart/confirm.wxml
@@ -46,20 +46,20 @@
 	<view class="weui-cells__title ">购物清单</view>
 	<view class="weui-cells weui-cells_after-title">
 		<checkbox-group name='cart'>
-			<view wx:for="{{products}}" wx:for-item='item' wx:key="index" wx:if="{{item.cart.checked}}" class="weui-cell">
-				<checkbox value="{{item.cart.productId}}:{{item.cart.num}}" checked="{{item.cart.checked}}" hidden="true" />
+			<view wx:for="{{products}}" wx:for-item='product' wx:key="index" wx:if="{{product.checked}}" class="weui-cell">
+				<checkbox value="{{product.id}}:{{product.num}}" checked="{{product.checked}}" hidden="true" />
 				<view class="weui-cell__hd">
 					<view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
 						<view class="weui-media-box__thumb">
-							<view class="weui-badge">{{item.cart.num}}</view>
-							<image mode="aspectFit" class="weui-media-box__thumb" src="{{domain}}/{{item.product.pictures[0]}}" />
+							<view class="weui-badge">{{product.num}}</view>
+							<image mode="aspectFit" class="weui-media-box__thumb" src="{{domain}}/{{product.pictures[0]}}" />
 						</view>
 					</view>
 				</view>
 				<view class="weui-cell__bd">
-					<view class="weui-media-box__title">{{item.product.name}} </view>
-					<view class="weui-media-box__desc">均价:{{item.product.average}}{{item.product.averageUnit}} × {{item.product.cart.num}}
-						<label class='status'>小计{{item.cart.total}}元</label>
+					<view class="weui-media-box__title">{{product.name}} </view>
+					<view class="weui-media-box__desc">均价:{{product.average}}{{product.averageUnit}} × {{product.num}}
+						<label class='status'>小计{{product.total}}元</label>
 					</view>
 				</view>
 			</view>
