--- a/WeChat/shop/pages/product/list.wxml
+++ b/WeChat/shop/pages/product/list.wxml
@@ -1,32 +1,32 @@
-<navigator class="weui-cells__title  " url="/pages/store/detail">
+<navigator class="weui-cells__title  " url="/pages/store/detail?id={{store.id}}">
     <view class="weui-cell__ft_in-access">门店：{{store.shortname}}</view>
 </navigator>
 <view class="weui-panel weui-media-box">
-    <block wx:for="{{products}}" wx:for-item='item' wx:key="index">
+    <block wx:for="{{products}}" wx:for-item='product' wx:key="index">
         <checkbox-group>
-            <navigator url="/pages/product/detail?id={{item.product.id}}&index={{index}}" class=" weui-media-box_appmsg" hover-class="weui-cell_active">
+            <navigator url="/pages/product/detail?id={{product.id}}&index={{index}}" class=" weui-media-box_appmsg" hover-class="weui-cell_active">
                 <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-                    <view class="weui-badge">{{item.cart.num}}</view>
-                    <image class="weui-media-box__thumb" src="{{domain}}/{{item.product.pictures[0]}}" />
+                    <view class="weui-badge">{{product.num}}</view>
+                    <image class="weui-media-box__thumb" src="{{domain}}/{{product.pictures[0]}}" />
                 </view>
                 <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-                    <view class="weui-media-box__title">{{item.product.name}}</view>
-                    <view class="weui-media-box__desc">{{item.product.description}}</view>
+                    <view class="weui-media-box__title">{{product.name}}</view>
+                    <view class="weui-media-box__desc">{{product.description}}</view>
                     <view class="weui-media-box__desc">
-                        <label>单价:{{item.product.price}}{{item.product.priceUnit}}</label>
+                        <label>单价:{{product.price}}{{product.priceUnit}}</label>
                     </view>
                     <view class="weui-media-box__desc">
-                        <label class="weui-cell_warn">均价:{{item.product.average}}{{item.product.averageUnit}}</label>
+                        <label class="weui-cell_warn">均价:{{product.average}}{{product.averageUnit}}</label>
                     </view>
                 </view>
             </navigator>
             <view class="weui-flex">
-                <label class="checkbox" wx:if="{{item.cart}}">
-                    <checkbox value="{{item.cart.id}}" checked="{{checkAll||item.cart.checked}}" bindtap="checkedChange" data-index="{{index}}" />
+                <label class="checkbox" wx:if="{{product.cartId}}">
+                    <checkbox value="{{product.cartId}}" checked="{{checkAll||product.checked}}" bindtap="checkedChange" data-index="{{index}}" />
                 </label>
                 <view class="weui-flex__item weui-cell__ft">
-                    <button type="default" size="mini" disabled="{{item.cart.num<=0}}" bindtap="subtractCount" id="{{index}}">减</button>
-                    <button type="default" size="mini" disabled="true"><text class="weui-cell_warn">{{item.cart.num}}</text></button>
+                    <button type="default" size="mini" disabled="{{product.num<=0}}" bindtap="subtractCount" id="{{index}}">减</button>
+                    <button type="default" size="mini" disabled="true"><text class="weui-cell_warn">{{product.num?product.num:0}}</text></button>
                     <button type="default" size="mini" bindtap="addCount" id="{{index}}">加</button>
                 </view>
             </view>
