--- a/WeChat/shop/pages/user/prefer.wxml
+++ b/WeChat/shop/pages/user/prefer.wxml
@@ -1,22 +1,22 @@
 <view class="weui-cells__title">我的收藏</view>
 <view class="weui-panel">
-	<view class="weui-media-box" wx:for="{{prefers}}" wx:for-item='item' wx:key="index">
-		<navigator url="/pages/product/detail?id={{item.product.id}}" class=" weui-media-box_appmsg" hover-class="weui-cell_active">
+	<view class="weui-media-box" wx:for="{{prefers}}" wx:for-item='product' wx:key="index">
+		<navigator url="/pages/product/detail?id={{product.id}}" class=" weui-media-box_appmsg" hover-class="weui-cell_active">
 			<view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-				<view class="weui-badge">{{item.cart.num}}</view>
-				<image class="weui-media-box__thumb" src="{{domain}}/{{item.product.pictures[0]}}" />
+				<view class="weui-badge">{{product.num?product.num:0}}</view>
+				<image class="weui-media-box__thumb" src="{{domain}}/{{product.pictures[0]}}" />
 			</view>
 			<view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-				<view class="weui-media-box__title">{{item.product.name}}</view>
-				<view class="weui-media-box__desc">{{item.product.description}}</view>
-				<view class="weui-media-box__desc"><label>单价:{{item.product.price}}{{item.product.priceUnit}}</label></view>
-				<view class="weui-media-box__desc"><label class="weui-cell_warn">均价:{{item.product.average}}{{item.product.averageUnit}}</label></view>
+				<view class="weui-media-box__title">{{product.name}}</view>
+				<view class="weui-media-box__desc">{{product.description}}</view>
+				<view class="weui-media-box__desc"><label>单价:{{product.price}}{{product.priceUnit}}</label></view>
+				<view class="weui-media-box__desc"><label class="weui-cell_warn">均价:{{product.average}}{{product.averageUnit}}</label></view>
 			</view>
 		</navigator>
 		<view class="weui-cell__ft">
-			<button type="default" size="mini" disabled="{{item.cart.num<=0}}" bindtap="subtractCount" id='{{index}}'>减</button>
+			<button type="default" size="mini" disabled="{{product.num<=0}}" bindtap="subtractCount" id='{{index}}'>减</button>
 			<button type="default" size="mini" disabled="true">
-				<text class="weui-cell_warn">{{item.cart.num}}</text>
+				<text class="weui-cell_warn">{{product.num?product.num:0}}</text>
 			</button>
 			<button type="default" size="mini" bindtap="addCount" id="{{index}}">加</button>
 		</view>
