--- a/WeChat/store/pages/login/login.wxml
+++ b/WeChat/store/pages/login/login.wxml
@@ -1,9 +1,4 @@
 <view class="content">
-	<view class="hd">
-		<open-data class="avatar" type='userAvatarUrl'></open-data>
-	</view>
-	<view class="bd">
-		<open-data type="userNickName"></open-data>
-	</view>
+	<image src="/images/logo.png" mode="aspectFit"></image>
 	<button class="weui-btn" type='primary' open-type='getPhoneNumber' bindgetphonenumber='wxLogin'>微信授权登录</button>
 </view>
