--- a/WeChat/store/pages/login/login.wxss
+++ b/WeChat/store/pages/login/login.wxss
@@ -1,21 +1,5 @@
 .content {
   text-align: center;
-  padding-top: 17vh;
+  height: 100vh;
 }
 
-.hd {
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-}
-.bd{
-  padding: 18px
-}
-.avatar {
-  background-color: #ffffff;
-  width: 100px;
-  height: 100px;
-  overflow: hidden;
-  border-radius: 50%;
-  display: block;
-}
