--- a/WeChat/store/pages/score/score.wxml
+++ b/WeChat/store/pages/score/score.wxml
@@ -1,13 +1,22 @@
 <view class="weui-cells__title">订单管理</view>
 <view class="weui-panel">
 	<view class="weui-cells weui-cells_after-title">
-        <navigator class="weui-cell" url='/pages/vip/list'>
+		<navigator class="weui-cell" url='/pages/vip/list'>
 			<view class="weui-cell__hd">
 				<image src="/images/finish.png" style="height:1em;width:1em;margin-right: 16px;" />
 			</view>
 			<view class="weui-cell__bd">我的会员</view>
 			<view class="weui-cell__ft weui-cell__ft_in-access"></view>
 		</navigator>
+
+		<navigator class="weui-cell" url='/pages/site/list'>
+			<view class="weui-cell__hd">
+				<image src="/images/finish.png" style="height:1em;width:1em;margin-right: 16px;" />
+			</view>
+			<view class="weui-cell__bd">我的站点</view>
+			<view class="weui-cell__ft weui-cell__ft_in-access"></view>
+		</navigator>
+
 		<navigator class="weui-cell" url='/pages/score/list?status=WAIT_PAY'>
 			<view class="weui-cell__hd">
 				<image src="/images/watting-pay.png" style="height:1em;width:1em;margin-right: 16px;" />
