--- a/WeChat/store/pages/site/detail.wxml
+++ b/WeChat/store/pages/site/detail.wxml
@@ -1,2 +1,49 @@
-<!--pages/site/detail.wxml-->
-<text>pages/site/detail.wxml</text>
+<view class="weui-cells__title">编辑地址</view>
+<view class="weui-panel weui-cells weui-cells__group_form weui-cells_form">
+  <form bindsubmit="saveSite">
+    <input wx:if="{{id}}" hidden name='id' value='{{id}}'></input>
+    <view class="weui-cell">
+      <view class="weui-cell__hd"><label class="weui-label">联系人</label></view>
+      <view class="weui-cell__bd">
+        <input class="weui-input" type="text" confirm-type='next' name='username' value="{{username}}" placeholder="请输入姓名" />
+      </view>
+    </view>
+
+    <view class="weui-cell">
+      <view class="weui-cell__hd"><label class="weui-label">手机号</label></view>
+      <view class="weui-cell__bd">
+        <input class="weui-input" type="number" name='phone' value="{{phone}}" pattern="[0-9]*" placeholder="请输入11位手机号" />
+      </view>
+    </view>
+
+    <view class="weui-cell ">
+      <view class="weui-cell__hd">
+        <view class="weui-label">地区</view>
+      </view>
+      <view class="weui-cell__bd">
+        <picker mode="region" bindchange="bindRegionChange" value="{{value}}">{{value[0]}}，{{value[1]}}，{{value[2]}}</picker>
+      </view>
+    </view>
+
+    <view class="weui-cell" bindtap='chooseLocation'>
+      <view class="weui-cell__bd">
+        <input name="name" id="name" value="{{name}}" placeholder="请选择地址"></input>
+      </view>
+      <view class="weui-cell__ft">
+        <image mode="aspectFit" src="/images/position.png" style="height:1em;width:1em" />
+      </view>
+    </view>
+
+    <view class="weui-cell">
+      <view class="weui-cell__bd">
+        <textarea name="detail" id="detail" cols="20" rows="5" value="{{detail}}" placeholder="请输入详细地址"></textarea>
+      </view>
+    </view>
+
+    <view class="weui-cell weui-flex">
+      <button wx:if="{{id}}" class="weui-flex__item" type='warn' bindtap="deleteSite">删除</button>
+      <button class="weui-flex__item" form-type="submit" type='primary'>保存</button>
+    </view>
+
+  </form>
+</view>
