--- a/WeChat/shop/pages/cart/confirm.wxml
+++ b/WeChat/shop/pages/cart/confirm.wxml
@@ -1,13 +1,23 @@
 <form bindsubmit="createScore">
-	<view class="weui-cells__title">门店-{{store.shortname}}</view>
-	<view class="weui-panel weui-cells weui-cells_after-title" url='/pages/address/list'>
+	<view class="weui-cells__title">{{store.shortname}}</view>
+	<view class="weui-panel weui-cells weui-cells_after-title">
 		<view class="weui-cell weui-cell_access">
-			<view class="weui-cell__bd weui-cell_primary">
-				<input type="number" hidden="true" name="storeId" value="{{store.id}}" />
-				<view class='weui-media-box__desc'>{{store.addressName}}</view>
-				<view class='weui-media-box__title'>{{store.username}} {{store.phone}}</view>
-				<view class='weui-media-box__desc'>{{store.addressDetail}}</view>
-			</view>
+			<navigator class="weui-cell__bd weui-cell_primary weui-cell__ft_in-access" style="min-height:2rem" hover-class="weui-cell_active" url='/pages/site/list?storeId={{store.id}}'>
+				<view class='weui-media-box__desc'>{{site.name}}</view>
+				<view class='weui-media-box__title'>{{site.username}} {{site.phone}}</view>
+				<view class='weui-media-box__desc'>{{site.detail}}</view>
+			</navigator>
+		</view>
+	</view>
+
+	<view class="weui-cells__title">联系方式</view>
+	<view class="weui-panel weui-cells weui-cells_after-title">
+		<view class="weui-cell weui-cell_access">
+			<navigator class="weui-cell__bd weui-cell_primary weui-cell__ft_in-access" style="min-height:2rem" hover-class="weui-cell_active" url='/pages/address/list'>
+				<view class='weui-media-box__desc'>{{address.name}}</view>
+				<view class='weui-media-box__title'>{{address.username}} {{address.phone}}</view>
+				<view class='weui-media-box__desc'>{{address.detail}}</view>
+			</navigator>
 		</view>
 	</view>
 
@@ -21,17 +31,6 @@
 				<radio value="true">门店自取(<text class="weui-cell_warn">推荐</text>)</radio>
 			</view>
 		</radio-group>
-	</view>
-
-	<view class="weui-cells__title">联系方式(<text class="weui-cell_warn">备用</text>)</view>
-	<view class="weui-panel weui-cells weui-cells_after-title">
-		<view class="weui-cell weui-cell_access">
-			<navigator class="weui-cell__bd weui-cell_primary weui-cell__ft_in-access" style="min-height:2rem" hover-class="weui-cell_active" url='/pages/address/list'>
-				<view class='weui-media-box__desc'>{{address.name}}</view>
-				<view class='weui-media-box__title'>{{address.username}} {{address.phone}}</view>
-				<view class='weui-media-box__desc'>{{address.detail}}</view>
-			</navigator>
-		</view>
 	</view>
 
 	<view class="weui-flex weui-cells__title">合计(<text class="weui-cell_warn">{{store.shortname}}</text>)</view>
