--- a/WeChat/shop/pages/cart/confirm.wxml
+++ b/WeChat/shop/pages/cart/confirm.wxml
@@ -1,16 +1,36 @@
 <form bindsubmit="createScore">
-	<view class="weui-cells__title">{{store.shortname}}</view>
-	<view class="weui-panel weui-cells weui-cells_after-title">
-		<view class="weui-cell weui-cell_access">
-			<navigator class="weui-cell__bd weui-cell_primary weui-cell__ft_in-access" style="min-height:2rem" hover-class="weui-cell_active" url='/pages/site/list?storeId={{store.id}}'>
-				<view class='weui-media-box__desc'>{{site.name}}</view>
-				<view class='weui-media-box__title'>{{site.username}} {{site.phone}}</view>
-				<view class='weui-media-box__desc'>{{site.detail}}</view>
-			</navigator>
+	<view class="weui-cells__title">联系人</view>
+	<view class=" weui-cells weui-cells_after-title weui-cells__group_form weui-cells_form">
+		<view class="weui-cell">
+			<view class="weui-cell__hd"><label class="weui-label">姓名</label></view>
+			<view class="weui-cell__bd">
+				<input class="weui-input" type="text" name='username' placeholder="请输入姓名" />
+			</view>
+		</view>
+		<view class="weui-cell">
+			<view class="weui-cell__hd"><label class="weui-label">手机号</label></view>
+			<view class="weui-cell__bd">
+				<input class="weui-input" type="number" name='phone' pattern="[0-9]*" placeholder="请输入11位手机号" />
+			</view>
 		</view>
 	</view>
 
-	<view class="weui-cells__title">联系方式</view>
+	<view class="weui-cells__title">配送方式</view>
+	<view class="weui-cells weui-cells_after-title">
+		<radio-group class="weui-cell weui-flex" bindchange="changeAddress" name="delivery">
+			<view class="weui-flex__item">
+				<radio value="MD">门店</radio>
+			</view>
+			<view class="weui-flex__item">
+				<radio value="ZQ">驿站</radio>
+			</view>
+			<view class="weui-flex__item">
+				<radio value="PS">配送</radio>
+			</view>
+		</radio-group>
+	</view>
+
+	<view class="weui-cells__title">收货地址</view>
 	<view class="weui-panel weui-cells weui-cells_after-title">
 		<view class="weui-cell weui-cell_access">
 			<navigator class="weui-cell__bd weui-cell_primary weui-cell__ft_in-access" style="min-height:2rem" hover-class="weui-cell_active" url='/pages/address/list'>
@@ -21,17 +41,7 @@
 		</view>
 	</view>
 
-	<view class="weui-flex weui-cells__title">配送方式</view>
-	<view class="weui-cells weui-cells_after-title">
-		<radio-group class="weui-cell weui-flex" bindchange="changeAddress" name="delivery">
-			<view class="weui-flex__item">
-				<radio value="false">等待配送</radio>
-			</view>
-			<view class="weui-flex__item">
-				<radio value="true">门店自取(<text class="weui-cell_warn">推荐</text>)</radio>
-			</view>
-		</radio-group>
-	</view>
+
 
 	<view class="weui-flex weui-cells__title">合计(<text class="weui-cell_warn">{{store.shortname}}</text>)</view>
 	<view class="weui-cells weui-cells_after-title">
