--- a/WeChat/store/pages/score/score.wxml
+++ b/WeChat/store/pages/score/score.wxml
@@ -45,13 +45,6 @@
 			<view class="weui-cell__bd">待签收</view>
 			<view class="weui-cell__ft weui-cell__ft_in-access"></view>
 		</navigator>
-		<navigator class="weui-cell" url='/pages/score/list?status=WAIT_TAKE'>
-			<view class="weui-cell__hd">
-				<image mode="aspectFit" src="/images/watting-sign.png" style="height:1em;width:1em;margin-right: 16px;" />
-			</view>
-			<view class="weui-cell__bd">待取货</view>
-			<view class="weui-cell__ft weui-cell__ft_in-access"></view>
-		</navigator>
 		<navigator class="weui-cell" url='/pages/score/list?status=FINISH'>
 			<view class="weui-cell__hd">
 				<image mode="aspectFit" src="/images/finish.png" style="height:1em;width:1em;margin-right: 16px;" />
@@ -81,7 +74,7 @@
 			<view class="weui-cell__ft weui-cell__ft_in-access"></view>
 		</navigator>
 
-		<navigator class="weui-cell" url='/pages/score/list?status=WAIT_PAY,WAIT_PACKAGE,WAIT_DELIVER,WAIT_SIGN,WAIT_TAKE,FINISH,REFUND_SCCESS,REFUND_CLOSED,REFUND_PROCESSING,REFUND_ABNORMAL'>
+		<navigator class="weui-cell" url='/pages/score/list?status=WAIT_PAY,WAIT_PACKAGE,WAIT_DELIVER,WAIT_SIGN,FINISH,REFUND_SCCESS,REFUND_CLOSED,REFUND_PROCESSING,REFUND_ABNORMAL'>
 			<view class="weui-cell__hd">
 				<image mode="aspectFit" src="/images/finish.png" style="height:1em;width:1em;margin-right: 16px;" />
 			</view>
