--- a/WeChat/shop/pages/address/list.wxml
+++ b/WeChat/shop/pages/address/list.wxml
@@ -1,6 +1,6 @@
 <view class="weui-cells__title">
 	<view class="weui-flex">
-	 <view class="weui-flex__item" >常用地址</view>	
+		<view class="weui-flex__item">常用地址</view>
 		<navigator url="/pages/address/detail"><button size='mini' style="font-size:0.7rem" bindtap="add">+</button></navigator>
 	</view>
 </view>
@@ -10,10 +10,8 @@
 			<view class="weui-media-box__hd_in-appmsg">
 				<radio value="{{index}}" />
 			</view>
-			<navigator url="/pages/address/detail?index={{index}}"
-				class="weui-media-box__bd weui-media-box__bd_in-appmsg weui-cell__ft_in-access">
+			<navigator url="/pages/address/detail?index={{index}}" class="weui-media-box__bd weui-media-box__bd_in-appmsg weui-cell__ft_in-access">
 				<view class="weui-media-box__desc">{{address.name}}</view>
-				<view class="weui-media-box__title">{{address.username}} {{address.phone}}</view>
 				<view class="weui-media-box__desc">{{address.detail}}</view>
 			</navigator>
 		</view>
