--- a/WeChat/shop/pages/cart/confirm.wxml
+++ b/WeChat/shop/pages/cart/confirm.wxml
@@ -59,9 +59,8 @@
 	<view class="weui-cells__title">驿站地址</view>
 	<view class="weui-panel weui-cells weui-cells_after-title">
 		<view class="weui-cell weui-cell_access">
-			<navigator class="weui-cell__bd weui-cell_primary weui-cell__ft_in-access" style="min-height:2rem" hover-class="weui-cell_active" url='/pages/address/list'>
+			<navigator class="weui-cell__bd weui-cell_primary weui-cell__ft_in-access" style="min-height:2rem" hover-class="weui-cell_active" url='/pages/site/list'>
 				<view class='weui-media-box__desc'>{{address.name}}</view>
-				<view class='weui-media-box__title'>{{address.username}} {{address.phone}}</view>
 				<view class='weui-media-box__desc'>{{address.detail}}</view>
 			</navigator>
 		</view>
