--- a/WeChat/shop/pages/site/list.wxml
+++ b/WeChat/shop/pages/site/list.wxml
@@ -7,9 +7,8 @@
       <view class="weui-media-box__hd_in-appmsg">
         <radio value="{{index}}" />
       </view>
-      <view  class="weui-media-box__bd weui-media-box__bd_in-appmsg weui-cell__ft_in-access">
-        <view class="weui-media-box__desc">{{site.name}}</view>
-        <view class="weui-media-box__title">{{site.username}} {{site.phone}}</view>
+      <view  class="weui-media-box__bd">
+        <view class="weui-media-box__title">{{site.name}}</view>
         <view class="weui-media-box__desc">{{site.detail}}</view>
       </view>
     </view>
