--- a/WeChat/shop/pages/cart/confirm.wxml
+++ b/WeChat/shop/pages/cart/confirm.wxml
@@ -104,6 +104,6 @@
 	<view style="min-height:180rpx"></view>
 
 	<view class="weui-flex weui-footer_fixed-bottom">
-		<button class="weui-flex__item" type="primary" form-type="submit" bindtap="saveScore">微信支付</button>
+		<button class="weui-flex__item" type="primary" form-type="submit" bindtap="createScore">微信支付</button>
 	</view>
 </form>
