--- a/WeChat/shop/pages/score/detail.wxml
+++ b/WeChat/shop/pages/score/detail.wxml
@@ -11,19 +11,22 @@
 		<view class="weui-cell__ft weui-cell__ft_in-access"></view>
 	</navigator>
 	<view class="weui-cell ">
+		<view class="weui-cell__hd">个人信息：</view>
+		<view class="weui-cell__bd">{{score.username}} {{score.phone}} <button type="primary" size="mini" style="font-size: 15rpx;" data-phone="{{score.phone}}" bindtap="makePhoneCall">呼叫</button></view>
+	</view>
+	<view class="weui-cell ">
 		<view class="weui-cell__hd">订单时间：</view>
 		<view class="weui-cell__bd">{{score.updateTime}}</view>
-		<view class="weui-cell__ft"><label class='status status-{{score.status}}'>{{scoreStatus[score.status]}}</label>
-		</view>
+		<view class="weui-cell__ft"><label class='status status-{{score.status}}'>{{scoreStatus[score.status]}}</label></view>
 	</view>
 </view>
 
-<view class="weui-cells__title">联系方式</view>
-<view class="weui-cells weui-cells_after-title">
+<view wx:if="{{store.way === 'YZ'}}" class="weui-cells__title">驿站地址</view>
+<view wx:if="{{store.way === 'PS'}}" class="weui-cells__title">收货地址</view>
+<view wx:if="{{store.way === 'YZ'||store.way === 'PS'}}" class="weui-cells weui-cells_after-title">
 	<view class="weui-cell weui-cell_access">
 		<view class="weui-cell__bd weui-cell_primary">
-			<view class='weui-media-box__desc'>{{score.addressName}}</view>
-			<view class='weui-media-box__title'>{{score.username}} {{score.phone}}</view>
+			<view class='weui-media-box__title'>{{score.addressName}}</view>
 			<view class='weui-media-box__desc'>{{score.addressDetail}}</view>
 		</view>
 	</view>
@@ -36,9 +39,7 @@
 			<view class='weui-media-box__desc'>{{score.storeUsername}} {{score.storePhone}} <button type="primary" size="mini" style="font-size: 15rpx;" data-phone="{{score.storePhone}}" bindtap="makePhoneCall">呼叫</button> </view>
 			<view class='weui-media-box__title'>{{score.storeAddressName}}</view>
 			<view class='weui-media-box__desc  weui-cell__ft_in-access' bindtap="getLocation" data-x="{{score.storeLocation.x}}" data-y="{{score.storeLocation.y}}" data-name="{{score.storeAddressName}}">{{score.storeAddressDetail}}</view>
-
 		</view>
-
 	</view>
 </view>
 
