--- a/WeChat/shop/pages/address/list.wxml
+++ b/WeChat/shop/pages/address/list.wxml
@@ -7,11 +7,9 @@
 <view class="weui-panel">
 	<radio-group class="radio-group" bindchange="changeAddress">
 		<view wx:for="{{addresses}}" wx:for-item='address' wx:key="index" class="weui-media-box weui-media-box_appmsg">
-			<view class="weui-media-box__hd_in-appmsg">
-				<radio value="{{index}}" />
-			</view>
+				<radio value="{{index}}" style="padding-right: 5px;" />
 			<navigator url="/pages/address/detail?index={{index}}" class="weui-media-box__bd weui-media-box__bd_in-appmsg weui-cell__ft_in-access">
-				<view class="weui-media-box__desc">{{address.name}}</view>
+				<view class="weui-media-box__title">{{address.name}}</view>
 				<view class="weui-media-box__desc">{{address.detail}}</view>
 			</navigator>
 		</view>
