--- a/WeChat/shop/pages/score/detail.wxml
+++ b/WeChat/shop/pages/score/detail.wxml
@@ -21,11 +21,11 @@
 	</view>
 </view>
 
-<view wx:if="{{store.way === 'YZ'}}" class="weui-cells__title">驿站自取</view>
-<view wx:if="{{store.way === 'PS'}}" class="weui-cells__title">收货地址</view>
-<view wx:if="{{store.way === 'YZ'||store.way === 'PS'}}" class="weui-cells weui-cells_after-title">
+<view wx:if="{{score.way === 'YZ'}}" class="weui-cells__title">驿站自取</view>
+<view wx:if="{{score.way === 'PS'}}" class="weui-cells__title">收货地址</view>
+<view wx:if="{{score.way === 'YZ'||score.way === 'PS'}}" class="weui-cells weui-cells_after-title">
 	<view class="weui-cell weui-cell_access">
-		<view class="weui-cell__bd weui-cell_primary">
+		<view class="weui-cell__bd">
 			<view class='weui-media-box__title'>{{score.addressName}}</view>
 			<view class='weui-media-box__desc'>{{score.addressDetail}}</view>
 		</view>
