--- a/WeChat/shop/pages/site/list.wxml
+++ b/WeChat/shop/pages/site/list.wxml
@@ -1,3 +1,11 @@
+<view class=" weui-search-bar">
+	<form class="weui-search-bar__form" bindsubmit="search">
+		<view class="weui-search-bar__box weui-media-box__title">
+			<input class=weui-search-bar__input" name="keyword" value="{{keyword}}" bindinput="inputChange"  confirm-type="search" style="width: 40vh;" placeholder="搜索 门店、商品 等关键字 " />
+			<button class="weui-icon-clear" type="primary" form-type="submit" size="mini" style="font-size: 0.rem;">搜索</button>
+		</view>
+	</form>
+</view>
 <view class="weui-cells__title" bindtap="chooseLocation">
 	<view class="weui-media-box__title weui-cell__ft_in-access">附近驿站:{{name}}</view>
 </view>
