--- a/WeChat/shop/pages/site/list.wxml
+++ b/WeChat/shop/pages/site/list.wxml
@@ -1,7 +1,7 @@
 <view class=" weui-search-bar">
 	<form class="weui-search-bar__form" bindsubmit="search">
 		<view class="weui-search-bar__box weui-media-box__title">
-			<input class=weui-search-bar__input" name="keyword" value="{{keyword}}" bindinput="inputChange"  confirm-type="search" style="width: 40vh;" placeholder="搜索 门店、商品 等关键字 " />
+			<input class=weui-search-bar__input" name="keyword" value="{{keyword}}" bindinput="inputChange"  confirm-type="search" style="width: 40vh;" placeholder="搜索地址关键字" />
 			<button class="weui-icon-clear" type="primary" form-type="submit" size="mini" style="font-size: 0.rem;">搜索</button>
 		</view>
 	</form>
